k8s/cli-peer0-deployment-spec.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cli
  namespace: org1
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: cli
    spec:
      hostname: cli     
      containers:
      - name: cli
        image: hyperledger/fabric-tools:x86_64-1.0.5
        volumeMounts:
        - name: run
          mountPath: /host/var/run/
        - name: nfs-bc
          mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
          subPath: crypto-config
        - name: nfs-bc
          mountPath: /opt/gopath/src/github.com/hyperledger/fabric/examples/chaincode/go
          subPath: chaincode
        - name: nfs-bc
          mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
          subPath: scripts
        - name: nfs-bc
          mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
          subPath: channel-artifacts
        workingDir: /opt/gopath/src/github.com/hyperledger/fabric/peer
        command: ["/bin/bash", "-c", "--"]
        args: ["while true; do sleep 30; done;"]
      volumes:
      - name: nfs-bc
        persistentVolumeClaim:
             claimName: nfs-bc
      - name: run
        hostPath:
          path: /var/run
