k8s/orderer-deployment-spec.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: org1
  name: orderer
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: hyperledger
        role: orderer
        org: org1        
    spec:
      containers:
      - name: orderer
        image: hyperledger/fabric-orderer:x86_64-1.0.5
        workingDir: /opt/gopath/src/github.com/hyperledger/fabric/peer
        ports:
         - containerPort: 7050
        command: ["orderer"]
        volumeMounts:
         - mountPath: /var/hyperledger/orderer/msp 
           name: nfs-bc
           subPath: crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/msp
         - mountPath: /var/hyperledger/orderer/tls
           name: nfs-bc
           subPath: crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/
         - mountPath: /var/hyperledger/orderer/orderer.genesis.block
           name: nfs-bc
           subPath: channel-artifacts/genesis.block
         - name: nfs-bc
           mountPath: /var/hyperledger/production
           subPath: ordererdata
      volumes:
       - name: nfs-bc
         persistentVolumeClaim:
             claimName: nfs-bc
