k8s/peer-deployment-spec.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: org1
  name: peer0
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: hyperledger
        role: peer
        org: org1
    spec:
      containers:
      - name: couchdb0
        image: hyperledger/fabric-couchdb:x86_64-1.0.5
        ports:
        - containerPort: 5984
        volumeMounts:
        - name: nfs-bc
          mountPath: /opt/couchdb/data
          subPath: peer0couchdb/data
        
      - name: peer0
        image: hyperledger/fabric-peer:x86_64-1.0.5
        volumeMounts:
        - name: run
          mountPath: /host/var/run/
        - name: nfs-bc
          mountPath: /etc/hyperledger/fabric/msp
          subPath: crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp
        - name: nfs-bc
          mountPath: /etc/hyperledger/fabric/tls
          subPath: crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/
        - name: nfs-bc
          mountPath: /var/hyperledger/production
          subPath: peer0data
        workingDir: /opt/gopath/src/github.com/hyperledger/fabric/peer
        command: ["peer"]
        args: ["node", "start"]
        ports:
        - containerPort: 7051
        - containerPort: 7052
        - containerPort: 7053
      volumes:
      - name: nfs-bc
        persistentVolumeClaim:
             claimName: nfs-bc
      - name: run
        hostPath:
          path: /var/run
