k8s/orderer-service-spec.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderer
  namespace: org1
spec:
  selector:
    app: hyperledger
    role: orderer
    org: org1
  ports:
  - protocol: TCP
    port: 7050
    targetPort: 7050
  type: NodePort
