k8s/peer-service-spec.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: org1
  name: peer0
spec:
  selector:
    app: hyperledger
    role: peer
    org: org1
  ports:
  - name: ex-port
    protocol: TCP
    port: 7051
    targetPort: 7051
  - name: cc-listen-port
    protocol: TCP
    port: 7052
    targetPort: 7052
  - name: event-port
    protocol: TCP
    port: 7053
    targetPort: 7053
  - name: couchdb-port
    protocol: TCP
    port: 5984
    targetPort: 5984
  type: NodePort
